# customer-analytics

./:  Pareto-NBD-Model.ipynb  .claudeignore  .gitignore  BG-BB-Model.ipynb  BG-BB-Model.qmd  BG-NBD-Model copy.ipynb  BG-NBD-Model-1.ipynb  BG-NBD-Model-Stan.qmd  BG-NBD-Model.ipynb  BG-NBD-Model.qmd  BdW-Model copy.ipynb  BdW-Model.ipynb  BdW-Model.qmd  Beta-Geometric Model.ipynb  Beta-Geometric-Model.ipynb  Beta-Geometric-Model.qmd  CBCV-Subscription-Based.ipynb  CBCV-Subscription-Based.qmd  CDNOW-Dataset.ipynb  CDNOW-Dataset.qmd  CLAUDE.md  Customer-Acquisition-Cost.ipynb  Customer-Acquisition-Cost.qmd  DoR-Model.ipynb  DoR-Model.qmd  Estimating-Purchasing-Concentration.qmd  NBD-Model.ipynb  NBD-Model.qmd  NBD-OTB-Model.ipynb  NBD-OTB-Model.qmd  New-Product-Sales-Forecasting-Dynamic-Changepoint-Model.ipynb  New-Product-Sales-Forecasting-Dynamic-Changepoint-Model.qmd  Pandas-buyer-behavior-summary-panel-data.ipynb  Pareto-NBD-Model-WIP.qmd  Pareto-NBD-Model.ipynb  Polars_Test.ipynb  README.md  RFM-Summary copy 2.ipynb  RFM-Summary copy.ipynb  RFM-Summary.ipynb  (+41 more)
Projects/: CLV taxonomy.xlsx  intro_tut_art_15.xlsx
Projects/art12_intro_tut_spreadsheets/: problem_1.xls  problem_2.xls  problem_4.xls
assets/quarto-style/: custom.scss
data/: 2-segment-retention.csv  CAC-Acquisition-Data.csv  CAC-Data.csv  DISH - ADD-LOSS-END.csv  DISH - RESULTS OF OPERATIONS.xlsx  DSC-retention-data.csv  FHWA-MV1-US-Vehicle-Registrations.xlsx  Ten-Ren-Tea-Co-data.csv  compare_csv_files-1.py  compare_csv_files.py  contractual-setting-multi-cohort-data.csv  hardie-sample-retention.csv  mktg-spend-example.csv  occupied-housing-units-US.csv  quarterly-estimates-housing-inventory-US.csv  quarterly-estimates-housing-inventory-US.xlsx  retention-example.csv  revised-quarterly-estimates-housing-inventory-US.csv  revised-quarterly-estimates-housing-inventory-US.xlsx  transaction-log-example.csv  txt_to_csv.py  us_new_passenger_car_sales.csv  us_registered_vehicles.csv
data/CBCV-Data/: cohort-data.csv  quarterly-data.csv
data/CDNOW/: CDNOW_master.csv  CDNOW_sample.csv  txt_to_csv.py
data/Donation-Incidence/: 1995_cohort_binary.csv
data/kiwibubbles/: kiwibubbles_mktmix.csv  kiwibubbles_tran.csv  (+1 more)
docs/: BG-BB-Model.html  BG-NBD-Model.html  BdW-Model.html  Beta-Geometric-Model.html  CDNOW-Dataset.html  Customer-Acquisition-Cost.html  DoR-Model.html  NBD-Model.html  NBD-OTB-Model.html  RFM-Summary.html  RFM-and-CLV.html  Sales-Forecast-Finite-Mixture-Beta-Geometric.html  buyer-behavior-summary-transaction-log.html  gamma-gamma.html  index.html
excel-models/: Projecting Customer Retention Rates (Modelling Discrete-Time Duration Data).xlsx  ~$Retention Modeling.xlsx
layouts/: marimo-test.grid.json
models/: BGBB.py  ParetoNBD.py  SbbGB.py
references/: SBB-G-B Model.py  great_tables.ipynb  multi-cohort_sBG_estimation.xls  numpy_data_analysis.py  pandas_notes.md  time-series-decomposition-from-scratch.ipynb
src/: index.qmd
stan_models/: Fader_Hardie-PyMC.ipynb  bg-nbd  bg-nbd-1  bg-nbd-1.stan  bg-nbd-2  bg-nbd-2.stan  bg-nbd-post  bg-nbd-post.stan  bg-nbd-prior  bg-nbd-prior.stan  bg-nbd.stan  pareto-nbd-hypermean.stan  pareto-nbd-ish.stan
utils/: CDNOW.py  Donation.py  LogitNormal.py  ModelSelectionCriteria.py  RFM.py  __init__.py  bandwidth.py  cdnow.py  cdnow_WIP copy.py  cdnow_WIP.py  donation.py  hypergeometricU.py  plotting.py  stan.py
(+179 files in other folders)
